syntax = "proto3";
package hello;

option go_package = "pkg/proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc HelloServerStream (HelloRequest) returns (stream HelloReply) {}
  rpc HelloClientStream (stream HelloRequest) returns (HelloReply) {}
  rpc HelloBidiStream (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}